--- a/index.html
+++ b/index.html
@@ -6,7 +6,16 @@
   <title>Text Formatting</title>
 </head>
 <body>
-
+ <h1>Title</h1>
+ <h2>Subtitle</h2>
+ <h3>Sub-Subtitle</h3>
+  <p>Hello World</p>
+  
+ <p> Hello Moon</p>
+  <p>
+  <em>Hello World!</em>
+  <strong>Warning!</strong>
+</p>
   <!-- Test 1: Wrap the title below, 'Text Formatting in HTML', in `h1` tags -->
   Text Formatting in HTML
 
